ingress/argo-demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-demo
  namespace: argo-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: argo-demo
